# daily-practice

./: pyproject.toml
daily_pratice/: logis_pratise.py  text.txt
daily_pratice/day02/: day02.py  test.txt
daily_pratice/day03/: test3.py
daily_pratice/day04/: test4.py
daily_pratice/day06/: test.txt
daily_pratice/day07/: tasks.txt  test7.py
daily_pratice/day08/: test8.py
daily_pratice/day10/: day10.py
daily_pratice/day11/: test11.py
daily_pratice/day12/: day12.py  test12.py
daily_pratice/day13/: grade_manager.py  grades.txt
daily_pratice/day14/: test14.py
daily_pratice/day15/: day15.py
daily_pratice/day16/: day16.py
daily_pratice/day18/: data.json  day18.py  students.json  tasks.json
daily_pratice/day19/: day19.py
daily_pratice/day20/: my_functions.py
daily_pratice/day21/: pipeline.py
daily_pratice/day22/: day22.py  test22.py
daily_pratice/day25/: test25.py
daily_pratice/day26/: day26.py
daily_pratice/day27/: day27.py  test27.py
daily_pratice/day28/: students.csv  students02.csv  test28.py
daily_pratice/day29/: combined_chart.html  day29.py  pie_chart.html  profit_rate_line.html  scatter_chart.html
daily_pratice/day30/: day30.py  test30.py
python/day01/: day01.py
python/day02/: test2.py
python/day03/: test3.py
python/day05/: day5.py
python/day06/: test6.py
python/day08/: day8.py
python/day09/: main.py
python/day10/: test10.py
python/day11/: day11.py
python/day13/: day13.py  test13.py
python/day14/: day14.py
python/day15/: test15.py
python/day17/: test17.py
tests/: test_weather.py
(+30 files in other folders)
